# kempt

./: .gitignore  .kempt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  action.yml  dist-workspace.toml  release.sh
.github/workflows/: bump-starter-versions.yml  release.yml
src/: cache.rs  cli.rs  commands.rs  config.rs  detekt.rs  formatters.rs  git.rs  gradle_dependencies.rs  hook.rs  license.rs  main.rs  paths.rs  pipeline.rs  upgrade.rs  whitespace.rs
