[package]
# Crate name is `kempt-fmt` because the short `kempt` is already taken on
# crates.io by an unrelated sorted-collection library. The installed
# binary is still `kempt` (see [[bin]] below).
name = "kempt-fmt"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0"
description = "A pre-commit-friendly multi-language formatter (ktfmt, google-java-format, license headers, whitespace)"
repository = "https://github.com/ZacSweers/kempt"
homepage = "https://github.com/ZacSweers/kempt"
readme = "README.md"
keywords = ["formatter", "ktfmt", "google-java-format", "kotlin", "java"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.75"

[[bin]]
name = "kempt"
path = "src/main.rs"

[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
globset = "0.4.18"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
toml = "1.1.2"
toml_edit = "0.25"
ureq = "3.3.0"
walkdir = "2"
which = "8.0.2"
